attempt fix invisible image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,7 +127,7 @@ section {
   user-select: none;
 }
 .nav::before {
-  content: '';
+  opacity: 1;
   display: block;
   position: absolute;
   left: 20px;
